--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,5 +1,4 @@
-.fonts {
-    @font-face {
+@font-face {
         src: 
         url(../fonts/Inter-Regular.woff2) format('woff2'),
         url(../fonts/Inter-Regular.woff) format('woff');
@@ -22,5 +21,4 @@
         font-family: "Inter";
         font-style: normal;
         font-weight: 900;
-} 
 }
